syntax = "proto3";
option csharp_namespace = "Elsa.ProtoActor.ProtoBuf";
package Elsa.ProtoActor.ProtoBuf;

import "google/protobuf/empty.proto";
import "Shared.proto";

message RegisterRunningWorkflowRequest {
  string DefinitionId = 1;
  int32 Version = 2;
  string InstanceId = 3;
  optional string CorrelationId = 6;
}

message UnregisterRunningWorkflowRequest {
  string InstanceId = 1;
}

message CountRunningWorkflowsRequest {
  string DefinitionId = 1;
  int32 Version = 2;
  optional string CorrelationId = 3;
}

message CountRunningWorkflowsResponse {
  optional int32 Count = 1;
}